maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:86: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if(!aMurOuest()){
                 ^